--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <ul id="todoList"></ul>
 
         <form action="" autocomplete="off">
-            <input type="text" name="todo">
-            <input type="submit" value="Add Todo">
+            <input type="text" name="todo" placeholder="+ Add Task">
+			<button type="submit">Add Todo</button>
+			<button type="reset">Reset</button>
         </form>
 
 		<script src="script.js"></script>
