--- a/index.html
+++ b/index.html
@@ -5,50 +5,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Todo List</title>
 		<link rel="stylesheet" href="style.css">
+		<script defer src="script.js"></script>
 	</head>
 	<body>
 		<section class="todo-section">
 			<h1>Todo List</h1>
 
-			<form action="">
+			<form action="" data-new-todo-form>
 				<input class="input-field" type="text" name="todo" autocomplete="off" placeholder="+ Add Task">
 			</form>
 
-			<div class="todo-list">
-				<!-- task 1 -->
-				<div class="todo">
-					<input type="checkbox" id="task-1">
-					<label for="task-1">
-						<span class="custom-checkbox"></span>
-						<p>Task 1</p>
-					</label>
-				</div>
-
-				<!-- task 2 -->
-				<div class="todo">
-					<input type="checkbox" id="task-2">
-					<label for="task-2">
-						<span class="custom-checkbox"></span>
-						<p>Task 2</p>
-					</label>
-				</div>
-				
-				<!-- task 3 -->
-				<div class="todo">
-					<input type="checkbox" id="task-3">
-					<label for="task-3">
-						<span class="custom-checkbox"></span>
-						<p>Task 3</p>
-					</label>
-				</div>
-			</div>
+			<div class="todo-list" data-todos></div>
 		</section>
 		
 		<div class="bottom-container">
-			<p><span id="tasks-remaining">0</span> Tasks Remaining</p>
-			<button class="btn" id="clear-button">Clear All</button>
-	</div>
-
-		<!-- <script src="script.js"></script> -->
+			<p data-tasks-remaining>0 Tasks Remaining</p>
+			<button class="btn" id="clear-button" data-clear-button>Clear All</button>
+		</div>
 	</body>
 </html>
