added and styled due date input field

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 			<input class="input-field" type="text" name="todo" autocomplete="off" placeholder="+ Add Task">
 			<div class="new-todo-container">
 				<input class="add-todo-btn" type="submit" name="add-todo" value="Add Task">
+				<div class="due-date">
+					<input type="date" id="due-date-btn" name="due-date-btn">
+					<label for="due-date-btn">
+						<img class="due-date-icon" src="./assets/calendar-1.png" alt="Calendar Icon">
+						<p>Due Date</p>
+					</label>
+				</div>
 				<div class="dropdown" data-dropdown>
 					<button class="dropdown-btn" data-dropdown-btn data-priority="No Priority">
 						<img src="assets/no-priority-flag.png" alt="No Priority Flag">
